--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "node ./build/main.js"
   },
   "dependencies": {
-    "better-sqlite3": "^4",
+    "better-sqlite3": "7.5.1",
     "date-fns": "^1",
-    "discord.js": "^11",
+    "discord.js": "^13",
     "lodash": "^4.17.13",
     "sqlite": "^2",
     "winston": "^2"
