--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "typescript.tsdk": "node_modules\\typescript\\lib",
-    "python.pythonPath": "C:\\Python36\\python.exe"
+    "python.pythonPath": "C:\\Python36\\python.exe",
+    "editor.formatOnSave": false
 }
