--- a/package.json
+++ b/package.json
@@ -10,18 +10,16 @@
   "dependencies": {
     "better-sqlite3": "7.5.1",
     "date-fns": "^1",
-    "discord.js": "^13",
+    "discord.js": "^11",
     "lodash": "^4.17.13",
-    "sqlite": "^2",
+    "sqlite": "^4",
+    "sqlite3": "^5.0.3",
     "winston": "^2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "*",
     "@types/lodash": "*",
     "@types/node": "^8",
-    "@types/winston": "^2",
-    "node-gyp": "^3",
-    "tslint": "^5",
-    "typescript": "^2"
+    "typescript": "^4"
   }
 }
