--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "discord.js": "^11",
     "lodash": "^4.17.13",
     "sqlite": "^4",
-    "sqlite3": "^5.0.3",
-    "winston": "^2"
+    "sqlite3": "^5.0.3"
   },
   "devDependencies": {
     "@types/better-sqlite3": "*",
