--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/better-sqlite3": "*",
     "@types/lodash": "*",
     "@types/node": "^8",
+    "prettier": "^2.6.2",
     "typescript": "^4"
   }
 }
