--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "build": "tsc -p .",
-        "start": "node ./build/main.js"
+        "start": "tsc -p . && node ./build/main.js"
     },
     "dependencies": {
         "better-sqlite3": "7.5.1",
