--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
         "start": "tsc -p . && node ./build/main.js"
     },
     "dependencies": {
-        "better-sqlite3": "7.5.1",
         "date-fns": "^1",
         "discord.js": "^13.6.0",
         "lodash": "^4.17.13",
         "sqlite": "^4",
-        "sqlite3": "^5.0.3"
+        "sqlite3": "^5.0.3",
+        "typescript": "^4"
     },
     "devDependencies": {
         "@types/better-sqlite3": "*",
@@ -22,7 +22,6 @@
         "@typescript-eslint/eslint-plugin": "^5.19.0",
         "@typescript-eslint/parser": "^5.19.0",
         "eslint": "^8.13.0",
-        "prettier": "^2.6.2",
-        "typescript": "^4"
+        "prettier": "^2.6.2"
     }
 }
