--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "date-fns": "^1",
         "discord.js": "^13.6.0",
         "lodash": "^4.17.13",
+        "minimist": "^1.2.6",
         "sqlite": "^4",
         "sqlite3": "^5.0.3",
         "typescript": "^4"
@@ -18,6 +19,7 @@
     "devDependencies": {
         "@types/better-sqlite3": "*",
         "@types/lodash": "*",
+        "@types/minimist": "^1.2.2",
         "@types/node": "^17.0.24",
         "@typescript-eslint/eslint-plugin": "^5.19.0",
         "@typescript-eslint/parser": "^5.19.0",
